# ChangeLog for vmware overlay
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  10 Nov 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/vmware-player/vmware-player-2.5.0.118166.ebuild,
  app-emulation/vmware-workstation/vmware-workstation-6.5.0.118166.ebuild:
  Fix up proper deaths on rollbacks.

  09 Nov 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/vmware-server/vmware-server-1.0.8.126538.ebuild,
  app-emulation/vmware-server-console/vmware-server-console-1.0.8.126538.ebu
  ild, app-emulation/vmware-server/vmware-server-2.0.0.122956.ebuild,
  app-emulation/vmware-player/vmware-player-2.5.0.118166.ebuild,
  app-emulation/vmware-workstation/vmware-workstation-6.5.0.118166.ebuild:
  Add in -* keyword for clarity.

  09 Nov 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/open-vm-tools/open-vm-tools-0.0.20080808.109361.ebuild,
  +app-emulation/open-vm-tools/open-vm-tools-0.0.20081010.123053.ebuild,
  app-emulation/vmware-server/vmware-server-1.0.8.126538.ebuild,
  app-emulation/vmware-server-console/vmware-server-console-1.0.8.126538.ebu
  ild, app-emulation/vmware-player/vmware-player-1.0.9.126128.ebuild,
  app-emulation/vmware-player/vmware-player-2.5.0.118166.ebuild,
  app-emulation/vmware-workstation/vmware-workstation-6.5.0.118166.ebuild:
  Fix up minor issues and bump open-vm-tools to the latest version.

  09 Nov 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/vmware-workstation/files/6.5.0.118166/vmware-workstation.py.
  patch:
  Fix up some bugs (path, env.d-path, eclipse, mime & term) in
  vmware-workstation-6.5 and vmware-player-2.5.

  09 Nov 2008; Mike Auty <ikelos@gentoo.org>
  -app-emulation/vmware-modules/files/1.0.0.19-makefile-kernel-dir.patch,
  -app-emulation/vmware-player/files/1.0.8.108000,
  -app-emulation/vmware-workstation/files/5.5.8.108000,
  +app-emulation/vmware-player/files/1.0.9.126128/004_all_do-not-build-modul
  es.patch, -app-emulation/vmware-server/files/2.0.0.116503,