@@ -13,6 +13,6 @@ DIST vmware-any-any-update115.tar.gz 493641 RMD160 56cabe56f70c01a22a7671e861cc5
 DIST vmware-modules-1.0.0.23.amd64.tar.bz2 489196 RMD160 5ef5d18ec22129cd4563d14ed8b213fdd3ad86ec SHA1 64a2fb7b1195d3ee773b9e49fe8dc9b5d7ffc43a SHA256 7d8028b9da2ad1694a6e71f1f6b1f63a9a03e78249f4cacdfccd1ea508e07d2a
 DIST vmware-modules-1.0.0.23.x86.tar.bz2 486085 RMD160 d039206f0ed3fcd93f7acf3bc24c340b8641057a SHA1 5a4e9ed931f6592c8332239e424afdd80b1b46e5 SHA256 5780292e519da9e1512bf78b1e0e6c21e44f4e10f214dcc0caf83af482dedf68
 EBUILD vmware-modules-1.0.0.15-r1.ebuild 311 RMD160 910dd70caac0af5c1bdb6d714b96f9c134cbdd8a SHA1 c56288915c67790e3b38207e14598923203b2c7c SHA256 dbce7d028f4fe0f042323a7e05754e311366ac33feb7361dab63af70017683f7
-EBUILD vmware-modules-1.0.0.22.ebuild 1349 RMD160 83af066da080c92b7baab2022c5757a074db6ba8 SHA1 f8a472a889634f1e350c91203d57eb81b958eb62 SHA256 1dbee31c322fcd203fcc40b864df35ec6e29d13a3ffbccdc490f45badf4f4133
-EBUILD vmware-modules-1.0.0.23.ebuild 719 RMD160 6a364998cec1f81d3ae3797b5e30e63f49993ccf SHA1 0cae11f300d1a79461340acfb91c61624fbb5229 SHA256 0b567bfbe9f846eaad26fc711a0cc138e7f2d24ecb49c629d3794ffc8ea12a9e
+EBUILD vmware-modules-1.0.0.22.ebuild 1355 RMD160 9b79248944e2351c4b85edda9fa1d2465f64a0fc SHA1 4690fb62e813bcf6d283bf6e689a9fd3b3b10289 SHA256 ad33b87ede51b07bbe942f45abfeebcf90fe94e87376d0330d4db59850e51685
+EBUILD vmware-modules-1.0.0.23.ebuild 726 RMD160 846196c669b057606cca33e0301559adbaeddc0a SHA1 67432dcb6bd2b64b73c7e141de0545fab6debbb0 SHA256 7e292abe93d1150e73aa220e3de1b52405269dbb2feab7b33e0843429d0630d8
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
